--- a/aperlambda.css
+++ b/aperlambda.css
@@ -1,4 +1,22 @@
 /*
+ * Elements
+ */
+
+h1
+{
+  margin: 0 !important;
+  padding: 2.8rem 0 1.68rem 0;
+}
+
+@media only screen and (max-width: 600px)
+{
+  h1
+  {
+    font-size: 15vmin;
+  }
+}
+
+/*
  *  Branding
  */
 
