--- a/css/lambdacolors_dark.css
+++ b/css/lambdacolors_dark.css
@@ -10,6 +10,11 @@
   background-color: #212329 !important
 }
 
+.lambdacolors_sidenav
+{
+  background-color: #22252B !important;
+}
+
 .lambdacolors_background
 {
   background-color: #262A32 !important;
