--- a/css/lambdastyle.css
+++ b/css/lambdastyle.css
@@ -8,6 +8,24 @@
  */
 
 /*
+ * Basics
+ */
+
+a {
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+ul:not(.browser-default) {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+ul:not(.browser-default) > li {
+  list-style-type: none;
+}
+
+/*
  * Grid
  */
 
@@ -15,6 +33,65 @@
   height: 1px;
   overflow: hidden;
   background-color: #e0e0e0;
+}
+
+/*
+ * Animations
+ */
+
+.pulse {
+  overflow: visible;
+  position: relative;
+}
+
+.pulse::before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: inherit;
+  border-radius: inherit;
+  transition: opacity .3s, transform .3s;
+  -webkit-transition: opacity .3s, -webkit-transform: .3s;
+  animation: pulse-animation 1.25s cubic-bezier(0.24, 0, 0.38, 1) infinite;
+  -webkit-animation: pulse-animation 1.25s cubic-bezier(0.24, 0, 0.38, 1) infinite;
+  z-index: -1;
+}
+
+ @keyframes pulse-animation {
+   0% {
+     opacity: 1;
+     -webkit-transform: scale(1);
+     transform: scale(1);
+   }
+   70% {
+     opacity: 0;
+     -webkit-transform: scale(1.5);
+     transform: scale(1.5);
+   }
+   100% {
+     opacity: 0;
+     -webkit-transform: scale(1.5);
+     transform: scale(1.5);
+   }
+ }
+
+@-webkit-keyframes pulse-animation {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+  }
+  50% {
+    opacity: 0;
+    -webkit-transform: scale(1.5);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1.5);
+  }
 }
 
 /*
