--- a/css/lambdastyle.css
+++ b/css/lambdastyle.css
@@ -54,37 +54,21 @@ ul:not(.browser-default) > li {
   left: 0;
   background-color: inherit;
   border-radius: inherit;
-  transition: opacity .3s, transform .3s;
   -webkit-transition: opacity .3s, -webkit-transform: .3s;
-  animation: pulse-animation 1.25s cubic-bezier(0.24, 0, 0.38, 1) infinite;
+  transition: opacity .3s, -webkit-transform .3s;
+  transition: opacity .3s, transform .3s;
+  transition: opacity .3s, transform .3s, -webkit-transform .3s;
   -webkit-animation: pulse-animation 1.25s cubic-bezier(0.24, 0, 0.38, 1) infinite;
+  animation: pulse-animation 1.25s cubic-bezier(0.24, 0, 0.38, 1) infinite;
   z-index: -1;
 }
-
- @keyframes pulse-animation {
-   0% {
-     opacity: 1;
-     -webkit-transform: scale(1);
-     transform: scale(1);
-   }
-   70% {
-     opacity: 0;
-     -webkit-transform: scale(1.5);
-     transform: scale(1.5);
-   }
-   100% {
-     opacity: 0;
-     -webkit-transform: scale(1.5);
-     transform: scale(1.5);
-   }
- }
 
 @-webkit-keyframes pulse-animation {
   0% {
     opacity: 1;
     -webkit-transform: scale(1);
   }
-  50% {
+  70% {
     opacity: 0;
     -webkit-transform: scale(1.5);
   }
@@ -93,6 +77,24 @@ ul:not(.browser-default) > li {
     -webkit-transform: scale(1.5);
   }
 }
+
+@keyframes pulse-animation {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  70% {
+    opacity: 0;
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+   }
+ }
 
 /*
  * Utilities.
