--- a/css/lambdastyle.css
+++ b/css/lambdastyle.css
@@ -11,6 +11,10 @@
  * Basics
  */
 
+html {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
 a {
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
@@ -23,6 +27,50 @@ ul:not(.browser-default) {
 
 ul:not(.browser-default) > li {
   list-style-type: none;
+}
+
+/*
+ * Typography
+ */
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 400;
+}
+
+h1 {
+  font-size: 6rem;
+  line-height: 110%;
+  margin: 2.8rem 0 1.68rem 0;
+}
+
+h2 {
+  font-size: 3.75rem;
+  line-height: 110%;
+  margin: 2.373rem 0 1.424rem 0;
+}
+
+h3 {
+  font-size: 3rem;
+  line-height: 110%;
+  margin: 1.94667rem 0 1.168rem 0;
+}
+
+h4 {
+  font-size: 2.125rem;
+  line-height: 110%;
+  margin: 1.52rem 0 0.912rem 0;
+}
+
+h5 {
+  font-size: 1.5rem;
+  line-height: 110%;
+  margin: 1.093rem 0 0.656rem 0;
+}
+
+h6 {
+  font-size: 1.25rem;
+  line-height: 110%;
+  margin: 0.767rem 0 0.46rem 0;
 }
 
 /*
