--- a/css/lambdastyle.css
+++ b/css/lambdastyle.css
@@ -89,7 +89,7 @@ h6 {
 
 .card .card-actions {
   background-color: inherit;
-  border-top: 1px solid #e0e0e0;
+  border-top: 1px solid #e0e0e033;
   position: relative;
   padding: 16px 14px;
 }
