--- a/css/lambdastyle.css
+++ b/css/lambdastyle.css
@@ -91,7 +91,7 @@ h6 {
   background-color: inherit;
   border-top: 1px solid #e0e0e033;
   position: relative;
-  padding: 16px 14px;
+  padding: 8px;
 }
 
 .card:not(.flat) .card-actions:last-child {
